lab1/Test/L1-A-12-0.output
Error Type B at Line 1
Error Type A at Line 10
Error Type B at Line 35
Error Type A at Line 41
